<resources>
    <string name="app_name">MeusGastos</string>
    <string name="action_settings">Settings</string>
    <string name="_350_00">350.00</string>
    <string name="_31_12_2017">31/12/2017</string>
    <string name="_45_1">45.1</string>
    <string name="_48000">48000</string>
    <string name="_9_876">9.876</string>
    <string name="combust_vel">Combustível</string>
    <string name="data_abastecimento">Data abastecimento</string>
    <string name="gravar">Gravar</string>
    <string name="litros_gastos">Litros gastos</string>
    <string name="od_metro_km">Odômetro (Km)</string>
    <string name="posto">Posto</string>
    <string name="salvar_registro">Salvar</string>
    <string name="veiculo">Veículo</string>
    <string name="valor_pago">Valor pago (R$)</string>
    <string name="preco_do_litro">Preço do Litro (R$)</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="medium2">Medium</string>
    <string name="medium3">Medium</string>
    <string name="textview">TextView</string>
    <string name="km_h">KM/h</string>
    <string-array name="list_tipo_combustivel">
        <item>-- Selecione --</item>
        <item>Gasolina</item>
        <item>Etanol</item>
        <item>GNV</item>
        <item>G. Aditivada</item>
    </string-array>
    <string-array name="list_posto">
    <item>-- Selecione --</item>
    <item>Walmart</item>
    <item>Outro</item>
        </string-array>
    <string-array name="list_veiculo">
        <item>-- Selecione --</item>
        <item>Sandero</item>
        <item>Outro</item>
    </string-array>
</resources>
