<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fandradetecinfo.com.meusgastos.Views.RegistroActivity"
    tools:showIn="@layout/activity_registro">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewAbastecimento"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
 
     <LinearLayout
        android:id="@+id/mainLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical|center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
	    
        <TextView
            android:text="@string/data_abastecimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:textColor="@android:color/background_light" />



        <TextView
            android:text="@string/veiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"

            android:textColor="@android:color/background_light"/>



        <TextView
            android:text="@string/posto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"

            android:textColor="@android:color/background_light" />



        <TextView
            android:text="@string/combust_vel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"

            android:textColor="@android:color/background_light" />



        <TextView
            android:text="@string/preco_do_litro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"

            android:textColor="@android:color/background_light" />



        <TextView
            android:text="@string/valor_pago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"

            android:textColor="@android:color/background_light" />

            <TextView
            android:text="@string/od_metro_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"

            android:textColor="@android:color/background_light" />



        <TextView
            android:text="@string/litros_gastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textColor="@android:color/background_light" />
	    
	    
	</LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txtData"
            android:text="@string/_31_12_2017"
            android:paddingLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
	    
	<Spinner
            android:layout_width="wrap_content"
            android:id="@+id/spinnerVeiculo"
            android:entries="@array/list_veiculo"
            android:paddingLeft="10dp"
            android:layout_height="40dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
	    
	<Spinner
            android:layout_width="wrap_content"
            android:id="@+id/spinnerPosto"
            android:entries="@array/list_posto"
            android:paddingLeft="10dp"
            android:layout_height="40dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
	               
	<Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/spinnerCombustivel"
            android:paddingLeft="10dp"
            android:entries="@array/list_tipo_combustivel"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
	    
	<EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txtPreco"

            android:paddingLeft="10dp"
            android:text="@string/_9_876"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

            <EditText
                android:id="@+id/txtPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:paddingLeft="10dp"

                android:text="@string/_350_00"

                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/_48000"
            android:ems="10"
            android:id="@+id/txtOdometro"
            android:paddingLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
	
	<EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/_45_1"
            android:ems="10"
            android:id="@+id/txtLitrosGastos"

            android:paddingLeft="10dp"

            tools:ignore="RtlHardcoded,RtlSymmetry" />




		
        </LinearLayout>
    </LinearLayout>
            </RelativeLayout>
        </FrameLayout>
    </ScrollView>
</RelativeLayout>
