<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fandradetecinfo.com.meusgastos.MainActivity"
    android:orientation="vertical"
    android:background="?attr/colorControlHighlight">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewFrag01"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content_grid"
        android:background="@android:color/darker_gray"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:paddingTop="5dp">

        <TextView
            android:text="@string/data_abastecimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="@android:color/background_light" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txtData"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/_31_12_2017"
            android:paddingLeft="10dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:text="Veículo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_row="1"
            android:layout_column="0"
            android:textColor="@android:color/background_light"/>

        <Spinner
            android:layout_width="wrap_content"
            android:id="@+id/spinnerVeiculo"
            android:layout_row="1"
            android:layout_column="1"
            android:entries="@array/list_veiculo"
            android:paddingLeft="10dp"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:text="@string/posto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_row="2"
            android:layout_column="0"
            android:textColor="@android:color/background_light" />

        <Spinner
            android:layout_width="wrap_content"
            android:id="@+id/spinnerPosto"
            android:layout_row="2"
            android:layout_column="1"
            android:entries="@array/list_posto"
            android:paddingLeft="10dp"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:text="@string/combust_vel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_row="3"
            android:layout_column="0"
            android:textColor="@android:color/background_light" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/spinnerCombustivel"
            android:layout_row="3"
            android:layout_column="1"
            android:paddingLeft="10dp"
            android:entries="@array/list_tipo_combustivel"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:text="Preço do Litro (R$)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_row="4"
            android:layout_column="0"
            android:textColor="@android:color/background_light" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txtPreco"
            android:layout_row="4"
            android:layout_column="1"
            android:paddingLeft="10dp"
            android:text="@string/_9_876"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:text="Valor pago (R$)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_row="5"
            android:layout_column="0"
            android:textColor="@android:color/background_light" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/_350_00"
            android:ems="10"
            android:id="@+id/txtPago"
            android:layout_row="5"
            android:paddingLeft="10dp"
            android:layout_column="1"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:text="@string/od_metro_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_row="6"
            android:layout_column="0"
            android:textColor="@android:color/background_light" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/_48000"
            android:ems="10"
            android:id="@+id/txtOdometro"
            android:layout_row="6"
            android:paddingLeft="10dp"
            android:layout_column="1"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:text="@string/litros_gastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_row="7"
            android:layout_column="0"
            android:textColor="@android:color/background_light" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/_45_1"
            android:ems="10"
            android:id="@+id/txtLitrosGastos"
            android:layout_row="7"
            android:paddingLeft="10dp"
            android:layout_column="1"
            tools:ignore="RtlSymmetry" />



    </GridLayout>

            <Button
                android:text="@string/gravar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:id="@+id/btnGravar"
                />
    </LinearLayout>
        </FrameLayout>

    </ScrollView>
</RelativeLayout>
